# Mini_Projekt-C-

./: README.md
AutoMinesweeper/: CMakeLists.txt  main.cpp  menu.cpp  menu.h  minesweeper.cpp  minesweeper.h  minesweeperautoplay.cpp  minesweeperautoplay.h  minesweeperfield.cpp  minesweeperfield.h
